<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title_nazev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add_item_nazev" />

            <EditText
                android:id="@+id/detail_nazev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_item_nazev_hint"
                android:maxLines="2"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="8dp"
                android:paddingBottom="10dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/main_title_datum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add_item_datum" />

            <EditText
                android:id="@+id/detail_datum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_item_datum_hint"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="8dp"
                android:paddingBottom="10dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/main_title_akce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add_item_typ_akce" />

            <EditText
                android:id="@+id/detail_akce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_item_typ_akce_hint"
                android:maxLines="2"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="8dp"
                android:paddingBottom="10dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/main_title_popis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add_item_popis" />

            <EditText
                android:id="@+id/detail_popis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_item_popis_hint"
                android:maxLines="2"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="8dp"
                android:paddingBottom="10dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/main_title_likeDislike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add_item_likeDislike" />

            <EditText
                android:id="@+id/detail_likeDislike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_item_likeDislike_hint"
                android:maxLines="2"
                android:paddingLeft="8dp"
                android:paddingTop="10dp"
                android:paddingRight="8dp"
                android:paddingBottom="10dp"
                android:scrollbars="vertical" />


        </LinearLayout>


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/detail_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_fab_check_black_24dp"
            android:backgroundTint="@color/floatingActionButton"/>

    </FrameLayout>


</ScrollView>
